================
 Change History
================

3.10.3 (2011-04-12)
===================

Bugs Fixed
----------

- "activity monitor not updated for subconnections when connection
  returned to pool"

  https://bugs.launchpad.net/zodb/+bug/737198

Performance enhancements
------------------------

- Improved ZEO client cache implementation to make it less likely to
  evict objects that are being used.

- Small (possibly negligable) reduction in CPU in ZEO storage servers
  to service object loads and in networking code.

3.10.2 (2011-02-12)
===================

Bugs Fixed
----------

- 3.10 introduced an optimization to try to address BTree conflict
  errors arrising for basing BTree keys on object ids. The
  optimization caused object ids allocated in aborted transactions to
  be reused. Unfortunately, this optimzation led to some rather
  severe failures in some applications.  The symptom is a conflict
  error in which one of the serials mentioned is zero.  This
  optimization has been removed.

  See (for example): https://bugs.launchpad.net/zodb/+bug/665452

- ZEO server transaction timeouts weren't logged as critical.

  https://bugs.launchpad.net/zodb/+bug/670986

3.10.1 (2010-10-27)
===================

Bugs Fixed
----------

- When a transaction rolled back a savepoint after adding objects and
  subsequently added more objects and committed, an error could be
  raised "ValueError: A different object already has the same oid"
  causing the transaction to fail. Worse, this could leave a database
  in a state where subsequent transactions in the same process would
  fail.

  https://bugs.launchpad.net/zodb/+bug/665452

- Unix domain sockets didn't work for ZEO (since the addition of IPv6
  support). https://bugs.launchpad.net/zodb/+bug/663259

- Removed a missfeature that can cause performance problems when using
  an external garbage collector with ZEO.  When objects were deleted
  from a storage, invalidations were sent to clients. This makes no